--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/caesarCipher"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/caesarCipher/"><i class="fab fa-google-play"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/caesarCipher/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -282,6 +282,21 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="https://github.com/miguel-eusebio/weatherMessage/blob/main/main.py"><i class="fab fa-github"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img node-background">
+                                    <img src="./css/img/proyectos/rickAndMorty.png" alt="Cifrado del Cesar">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">API Rick And Morty</div>
+                                    <div class="language node-font">Node</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="node-background" title="GitHub" href="https://github.com/miguel-eusebio/rickAndMorty"><i class="fab fa-github"></i></a>
+                                    <a class="node-background" title="Ejecutar Online" href="https://rickandmorty-production-6d82.up.railway.app/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -311,7 +326,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/diceGame"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/diceGame/"><i class="fab fa-google-play"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/diceGame/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -326,7 +341,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/drumKit"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/drumKit/"><i class="fab fa-google-play"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/drumKit/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -341,7 +356,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/simonGame"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/simonGame/"><i class="fab fa-google-play"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/simonGame/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -356,7 +371,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/enviromentBlog"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/enviromentBlog/"><i class="fab fa-google-play"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/enviromentBlog/"><i class="fab fa-google-play"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -371,7 +386,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
-                                    <a class="python-background" title="Jugar Online" href="https://replit.com/@MiguelEusebio/Piedra-papel-o-tijeras#main.py"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Ejecutar Online" href="https://replit.com/@MiguelEusebio/Piedra-papel-o-tijeras#main.py"><i class="fab fa-google-play"></i></a>
                                     <a class="python-background" title="Descargar" href="https://drive.google.com/uc?id=1Ksugt19RDk0X-28oudbMhtEkHXxduNYO/view&export=download&authuser=0"><i class="fab fa-google-drive"></i></a>
                                   </div>
                                 </div>
@@ -387,7 +402,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
-                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Ejecutar Online" href="¨#"><i class="fab fa-google-play"></i></a>
                                     <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
                                   </div>
                                 </div>
@@ -403,7 +418,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
-                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Ejecutar Online" href="¨#"><i class="fab fa-google-play"></i></a>
                                     <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
                                   </div>
                                 </div>
@@ -419,7 +434,7 @@
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
-                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Ejecutar Online" href="¨#"><i class="fab fa-google-play"></i></a>
                                     <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
                                   </div>
                                 </div>
