adding inventoryManager project

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <a name="portafolio">
                     <h3 class="title texto-separado">Portafolio</h3>
                 </a>
-                <p>Aquí encontraras algunos proyectos que he realizado.</p>
+                <p>Aquí encontrarás algunas aplicaciones webs y de escritorio que he realizado.</p>
             </div>
             <div id="proyectos-web">
                 <div class="Carousel">
@@ -256,6 +256,20 @@
                             </svg>
                         </button>
                         <div class="slick-track" id="track">
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/inventario.png" alt="Gestor de Inventario">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Gestor de Inventario</div>
+                                    <div class="language python-font">Python (Tkinter)</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="https://github.com/miguel-eusebio/inventoryManager"><i class="fab fa-github"></i></a>
+                                  </div>
+                                </div>
+                            </div>
                             <div class="card">
                                 <div class="content">
                                   <div class="img js-background">
@@ -291,7 +305,7 @@
                                     <img src="./css/img/proyectos/rickAndMorty.png" alt="Cifrado del Cesar">
                                   </div>
                                   <div class="details">
-                                    <div class="name">API Rick And Morty</div>
+                                    <div class="name">Rick And Morty API</div>
                                     <div class="language node-font">Node</div>
                                   </div>
                                   <div class="media-icons">
@@ -307,7 +321,7 @@
                                   </div>
                                   <div class="details">
                                     <div class="name">Cifrado César</div>
-                                    <div class="language python-font">Python</div>
+                                    <div class="language python-font">Python (Tkinter)</div>
                                   </div>
                                   <div class="media-icons">
                                     <a class="python-background" title="GitHub" href="https://github.com/miguel-eusebio/pyCaesarCipher"><i class="fab fa-github"></i></a>
@@ -508,7 +522,7 @@
                 <hr>
 
                 <div class="creditos">
-                    <span>Iconos y foto de avatar tomadas de:</span>
+                    <span>Imagenes tomadas de:</span>
                     <a href="https://www.freepik.es" title="freepik.es">https://www.freepik.es</a>
                     <span>y</span>
                     <a href="https://www.flaticon.com" title="flaticon.com">https://www.flaticon.com</a>
