--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                   <p>Django</p>
               </div>
               <div>
-                  <img src="./css/img/habilidades/postman.png" alt="skill image" class="img-skill">
-                  <p>Postman</p>
+                  <img src="./css/img/habilidades/php.png" alt="skill image" class="img-skill">
+                  <p>PHP</p>
               </div>
           </section>
 
