--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="shortcut icon" href="./css/img/iconos/briefcase.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./css/img/iconos/maletin.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -280,6 +280,20 @@
                             </div>
                             <div class="card">
                                 <div class="content">
+                                  <div class="img php-background">
+                                    <img src="./css/img/proyectos/todo.png" alt="Cifrado del Cesar">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">To do App</div>
+                                    <div class="language php-font">PHP (Laravel)</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="php-background" title="GitHub" href="https://github.com/miguel-eusebio/todoLaravel"><i class="fab fa-github"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
                                   <div class="img python-background">
                                     <img src="./css/img/proyectos/weather.png" alt="Weather Message">
                                   </div>
@@ -325,6 +339,37 @@
                             <div class="card">
                                 <div class="content">
                                   <div class="img js-background">
+                                    <img src="./css/img/proyectos/planeta.png" alt="Blog Ambiental">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Blog Ambiental</div>
+                                    <div class="language js-font">JavaScript</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/enviromentBlog"><i class="fab fa-github"></i></a>
+                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/enviromentBlog/"><i class="fab fa-google-play"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/rock.png" alt="Piedra, Papel o Tijera">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Piedra, Papel o Tijera</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
+                                    <a class="python-background" title="Ejecutar Online" href="https://replit.com/@MiguelEusebio/Piedra-papel-o-tijeras#main.py"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Descargar" href="https://drive.google.com/uc?id=1Ksugt19RDk0X-28oudbMhtEkHXxduNYO/view&export=download&authuser=0"><i class="fab fa-google-drive"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img js-background">
                                     <img src="./css/img/proyectos/dice.png" alt="Dados">
                                   </div>
                                   <div class="details">
@@ -364,37 +409,6 @@
                                   <div class="media-icons">
                                     <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/simonGame"><i class="fab fa-github"></i></a>
                                     <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/simonGame/"><i class="fab fa-google-play"></i></a>
-                                  </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="content">
-                                  <div class="img js-background">
-                                    <img src="./css/img/proyectos/planeta.png" alt="Blog Ambiental">
-                                  </div>
-                                  <div class="details">
-                                    <div class="name">Blog Ambiental</div>
-                                    <div class="language js-font">JavaScript</div>
-                                  </div>
-                                  <div class="media-icons">
-                                    <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/enviromentBlog"><i class="fab fa-github"></i></a>
-                                    <a class="js-background" title="Ejecutar Online" href="https://miguel-eusebio.github.io/enviromentBlog/"><i class="fab fa-google-play"></i></a>
-                                  </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="content">
-                                  <div class="img python-background">
-                                    <img src="./css/img/proyectos/rock.png" alt="Piedra, Papel o Tijera">
-                                  </div>
-                                  <div class="details">
-                                    <div class="name">Piedra, Papel o Tijera</div>
-                                    <div class="language python-font">Python</div>
-                                  </div>
-                                  <div class="media-icons">
-                                    <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
-                                    <a class="python-background" title="Ejecutar Online" href="https://replit.com/@MiguelEusebio/Piedra-papel-o-tijeras#main.py"><i class="fab fa-google-play"></i></a>
-                                    <a class="python-background" title="Descargar" href="https://drive.google.com/uc?id=1Ksugt19RDk0X-28oudbMhtEkHXxduNYO/view&export=download&authuser=0"><i class="fab fa-google-drive"></i></a>
                                   </div>
                                 </div>
                             </div>
@@ -444,8 +458,6 @@
 
                 <div class="creditos">
                     <span>Imagenes tomadas de:</span>
-                    <!-- <a href="https://www.freepik.es" title="freepik.es">https://www.freepik.es</a>
-                    <span>y</span> -->
                     <a href="https://www.flaticon.com" title="flaticon.com">https://www.flaticon.com</a>
                 </div>
             </div>
